--- a/nwaar.html
+++ b/nwaar.html
@@ -126,6 +126,17 @@
             max-height: 300px;
             overflow-y: scroll;
         }
+        .result-box li {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+        .result-box img {
+            width: 50px;
+            height: 100px;
+            object-fit: cover;
+            margin-right: 20px;
+        }
 
 
 
@@ -190,6 +201,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                padding-top: 100px;
                 transition: all 0.5s ease;
             }
 
