--- a/manga.html
+++ b/manga.html
@@ -122,6 +122,17 @@
             max-height: 300px;
             overflow-y: scroll;
         }
+        .result-box li {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+        .result-box img {
+            width: 50px;
+            height: 100px;
+            object-fit: cover;
+            margin-right: 20px;
+        }
 
 
 
