--- a/animofil.html
+++ b/animofil.html
@@ -123,6 +123,18 @@
             overflow-y: scroll;
         }
 
+        .result-box li {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+        .result-box img {
+            width: 50px;
+            height: 100px;
+            object-fit: cover;
+            margin-right: 20px;
+        }
+
 
 
 
@@ -186,6 +198,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                padding-top: 100px;
                 transition: all 0.5s ease;
             }
 
