--- a/manga.html
+++ b/manga.html
@@ -197,6 +197,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                padding-top: 100px;
                 transition: all 0.5s ease;
             }
 
