--- a/animofil.html
+++ b/animofil.html
@@ -186,7 +186,7 @@
             }
 
 
-            .nav-links {
+             .nav-links {
                 z-index: 2;
                 top: 0;
                 left: 0;
@@ -194,11 +194,13 @@
                 background-color: rgba(0, 0, 0, 0.491);
                 backdrop-filter: blur(3px);
                 width: 100%;
-                height: 50vh;
+                min-height: 50vh;
+                height: auto;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 padding-top: 100px;
+                padding-bottom: 10px;
                 transition: all 0.5s ease;
             }
 
